--- a/css/style.css
+++ b/css/style.css
@@ -133,10 +133,8 @@ table {
 
     @media screen and (max-width:768px){
       .blog{
-        max-width: 100%;
-        justify-content: center;
-        gap: 16px;
-        padding: 0 12px;
+        max-width: 90%;
+        gap: 16px 0 ;
     }
       .blog li{
        flex: 0 0 100%; 
