--- a/css/style.css
+++ b/css/style.css
@@ -1,144 +1,111 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
 body {
-  line-height: 1;
+  color: #4B4B4B;
+  line-height: 1.5;
+  font-family: "Noto Sans", sans-serif;
+  font-weight: 500;
 }
 
-ol, ul {
-  list-style: none;
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+
 }
 
-blockquote, q {
-  quotes: none;
+a {
+  text-decoration: none;
+  display: inline-block;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
+.blue {
+  color: #0027D5;
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+.fs-3 {
+  font-size: 24px;
 }
-*,*::before,*::after{
-    box-sizing: border-box;}
 
-    body{
-      color:#4B4B4B;
-      line-height: 1.5;
-      font-family: "Noto Sans", sans-serif;
-      font-weight: 500;
-    }
-    img {
-      width: 100%;
-      height: auto;
-      display: block;
-      
-    }
-    a{text-decoration: none;
-      display:inline-block;
-    }
-    .blue{color:#0027D5;}
-    .fs-3{font-size: 24px;}
-    .fs-4{font-size: 28px;}
+.fs-4 {
+  font-size: 28px;
+}
 
-    .blog .content{margin: 16px 0;}
-    
-    .blog{
-      display: flex;
-      flex-wrap: wrap;
-      max-width: 1296px;
-      margin: 40px auto;
-      gap:80px 24px;  
-    }
-    
-    .blog li{
-      flex: 1 1 calc((100% - 48px) / 3); 
-      max-width: calc((100% - 48px) / 3);
-    }
-    .date{
-      margin-bottom: 4px;
-    }
-    
-    .blog .title{
-      font-weight: 700;
-      color:#000000;
-      padding-bottom: 8px;
-      }  
-    .blog p{
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
-      -webkit-line-clamp:2;
-      overflow: hidden;
-    }
-    
-    .blog-read a{ border-radius: 40px;
-      border: 1px solid #000000;
-      padding: 8px 16px;
-      width: 96px;
-      color: #4B4B4B;
-      white-space: nowrap;   
-      text-align: center;
-      }
-    
-    .blog-read a:hover{
-      background-color:#000000;
-      border: none;
-      color: white;}
-    .blog-tag{
-      display: flex;
-      align-items: center;}
-    
-    .blog-tag .badge{
-      padding: 6px 12px;
-      display:inline-block;
-      border-radius: 40px;
-      background:#0027D5;
-      color:#fff;
-      font-size: 16px;
-      margin-left: 8px;
-      text-align: center;
-    }
+.blog {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1296px;
+  margin: 40px auto;
+  gap: 80px 24px;
+}
 
-    @media screen and (max-width:768px){
-      .blog{
-        max-width: 90%;
-        gap: 16px 0 ;
-    }
-      .blog li{
-       flex: 0 0 100%; 
-       max-width: 100%;
-    }
-    
-    }
+.blog .content {
+  margin: 16px 0;
+}
+
+.blog li {
+  flex: 1 1 calc((100% - 48px) / 3);
+  max-width: calc((100% - 48px) / 3);
+}
+
+.date {
+  margin-bottom: 4px;
+}
+
+.blog .title {
+  font-weight: 700;
+  color: #000000;
+  padding-bottom: 8px;
+}
+
+.blog p {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.blog-read a {
+  border-radius: 40px;
+  border: 1px solid #000000;
+  padding: 8px 16px;
+  width: 96px;
+  color: #4B4B4B;
+  white-space: nowrap;
+  text-align: center;
+}
+
+.blog-read a:hover {
+  background-color: #000000;
+  border: none;
+  color: white;
+}
+
+.blog-tag {
+  display: flex;
+  align-items: center;
+}
+
+.blog-tag .badge {
+  padding: 6px 12px;
+  display: inline-block;
+  border-radius: 40px;
+  background: #0027D5;
+  color: #fff;
+  font-size: 16px;
+  margin-left: 8px;
+  text-align: center;
+}
+
+@media screen and (max-width:768px) {
+  .blog {
+    max-width: 100%;
+    gap: 40px 0;
+    padding: 0 16px;
+
+  }
+
+  .blog li {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+}
